objects/User.object
<CustomObject>
    <fields>
        <fullName>AP_Territory_Head__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AP Territory Head</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attended_Mandatory_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether the user has attended Mandatory Training. This is required for the user to complete before they can log in to Salesforce.</description>
        <label>Attended Mandatory Training?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Created_In_Open_Text__c</fullName>
        <formula>Contact.UserFoundInOT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Created In Open Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Passed__c</fullName>
        <label>Date Passed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dept_Cost_Center_Number__c</fullName>
        <label>Dept Cost Center Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_Territory_Head__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EUR Territory Head</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab_Assigned__c</fullName>
        <label>Fab Assigned</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAB 1</fullName>
                </value>
                <value>
                    <fullName>FAB 2</fullName>
                </value>
                <value>
                    <fullName>FAB 3</fullName>
                </value>
                <value>
                    <fullName>FAB 3E</fullName>
                </value>
                <value>
                    <fullName>FAB 5</fullName>
                </value>
                <value>
                    <fullName>FAB 6</fullName>
                </value>
                <value>
                    <fullName>FAB 7</fullName>
                </value>
                <value>
                    <fullName>FAB 8</fullName>
                </value>
                <value>
                    <fullName>FAB 9</fullName>
                </value>
                <value>
                    <fullName>FAB 10</fullName>
                </value>
                <value>
                    <fullName>FAB 11</fullName>
                </value>
                <value>
                    <fullName>ALTIS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fab_Assignment_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fab Assignment Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fab_Deleted__c</fullName>
        <label>Fab Deleted</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCM_Employee_ID__c</fullName>
        <description>The Federation Identifier field is not available in formula fields.  This field is a copy of the federation Identifier (HCM Employee ID).  A User trigger will update this field from the Federation Identifier</description>
        <label>HCM Employee ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCM_Employee__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  HCM_Record_ID__c , &quot;View&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HCM Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCM_Login_ID__c</fullName>
        <description>Updated from the HCM Employee record</description>
        <label>HCM Login ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCM_Record_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Salesforce record ID for the related &quot;HCM Employee&quot; record</description>
        <label>HCM Record ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ITAR_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ITAR_Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITAR_End_Date_Formula__c</fullName>
        <formula>IF( ITAR_End_Date__c &gt;TODAY(), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ITAR End Date Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ITAR_End_Date__c</fullName>
        <label>ITAR End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MassEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MassEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Id__c</fullName>
        <formula>CASESAFEID(Contact.Account.Id)</formula>
        <label>Parent Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>Contact.Account.Name</formula>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_RecordType__c</fullName>
        <formula>Contact.Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account RecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Short_Name__c</fullName>
        <formula>Contact.Account.Short_Name__c</formula>
        <label>Parent Account Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Email__c</fullName>
        <formula>Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Login__c</fullName>
        <label>Portal Login</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>US_Territory_Head__c</fullName>
        <defaultValue>false</defaultValue>
        <label>US Territory Head</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserFoundInOT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Found In Open Text</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_18_Digit_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User 18 Digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile_Name__c</fullName>
        <formula>Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>View_HCM_Employee__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  HCM_Record_ID__c , &quot;View&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View HCM Employee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Certified_Product_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Product Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Certified_Scrum_Master__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certified Scrum Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Team User</fullName>
                </value>
                <value>
                    <fullName>API User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Notification_Level__c</fullName>
        <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
        <label>Work Notification Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bread &amp; Butter</fullName>
                </value>
                <value>
                    <fullName>Meat &amp; Potatoes</fullName>
                    <default>true</default>
                    <label>Meat &amp; Potatoes</label>
                </value>
                <value>
                    <fullName>The Whole Enchilada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Product_Owner_Certified_Date__c</fullName>
        <label>Product Owner Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Master_Certified_Date__c</fullName>
        <label>Scrum Master Certified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Show_All_Work_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show All Work Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Member_Allocation__c</fullName>
        <formula>HYPERLINK(&apos;/apex/adm_teammemberallocation?Id=&apos; +  Id, &apos;view&apos; )</formula>
        <label>Team Member Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__User_Preference__c</fullName>
        <label>User Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Wall_Preference__c</fullName>
        <label>Wall Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work_User_Interface__c</fullName>
        <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
        <label>Work User Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Next Generation</fullName>
                    <default>true</default>
                    <label>Next Generation</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EchoSign - Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in EchoSign API.</inlineHelpText>
        <label>EchoSign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Active_Internal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>HCM_Employee_ID__c</columns>
        <columns>View_HCM_Employee__c</columns>
        <columns>MANAGER</columns>
        <columns>Fab_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Active Internal Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Internal_Users_kkieft</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>HCM_Employee_ID__c</columns>
        <columns>View_HCM_Employee__c</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>MANAGER</columns>
        <columns>Fab_Assigned__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <filters>
            <field>CORE.USERS.DEPARTMENT</field>
            <operation>contains</operation>
            <value>Foundry PE</value>
        </filters>
        <label>Active Internal Users for Ken Kieft</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Active_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>View_HCM_Employee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Users_with_No_HCM_Employee_ID</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>HCM_Employee_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HCM_Employee_ID__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users with No HCM Employee ID</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Admin</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.USERTYPE</field>
            <operation>equals</operation>
            <value>S</value>
        </filters>
        <label>Admin Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Chatter_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>Chatter External User</value>
        </filters>
        <label>Chatter Users</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GF_Global_Admin</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>HCM_Employee_ID__c</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF Planning</value>
        </filters>
        <label>GF Global Admin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PIYE_not_yet_login</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>View_HCM_Employee__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CREATED_BY_NAME</columns>
        <columns>SU_ACCESS_EXPIRATION</columns>
        <columns>PASSWORD_EXPIRES</columns>
        <columns>CORE.PROFILE.USERTYPE</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_BY_NAME</field>
            <operation>equals</operation>
            <value>BATCHUSR CRM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>3/25/2013 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF Platform</value>
        </filters>
        <label>PIYE to change to GF PIYE profile</label>
    </listViews>
    <listViews>
        <fullName>Pat_O_Leary</fullName>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Pat</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>equals</operation>
            <value>OLeary</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>olearp@us.ibm.com</value>
        </filters>
        <label>Pat OLeary</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Territory_Heads</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>HCM_Employee_ID__c</columns>
        <columns>AP_Territory_Head__c</columns>
        <columns>EUR_Territory_Head__c</columns>
        <columns>US_Territory_Head__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AP_Territory_Head__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>EUR_Territory_Head__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>US_Territory_Head__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Territory Heads</label>
    </listViews>
    <listViews>
        <fullName>UAT_users</fullName>
        <booleanFilter>(1 OR 2 OR 3 OR 4 OR 5 OR 6 OR 7 OR 8) AND 9</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>MANAGER</columns>
        <columns>HCM_Login_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF CE</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF FAE/FTS</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF Global Admin</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF Product Marketing</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF Sales User</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF Strategic Marketing</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF System Admin</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>GF Finance</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>UAT users</label>
    </listViews>
    <listViews>
        <fullName>Young_Fisher</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Kristina</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Young-Fisher</value>
        </filters>
        <filters>
            <field>CORE.USERS.EMAIL</field>
            <operation>equals</operation>
            <value>kristina.young-fisher@globalfoundries.com</value>
        </filters>
        <label>Young-Fisher</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Account_Unauthorized</fullName>
        <active>true</active>
        <description>This account is been marked as unauthorized, kindly check with GTC team for further clarification.</description>
        <errorConditionFormula>Contact.Account.Unauthorized__c = true</errorConditionFormula>
        <errorMessage>This account is been marked as unauthorized, kindly check with GTC team for further clarification.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_active_users_for_Inactive_account</fullName>
        <active>true</active>
        <description>FV2: validation rule to restrict the activation of users for inactive account</description>
        <errorConditionFormula>ISPICKVAL(Contact.Account.Stage__c ,&apos;Inactive&apos;) &amp;&amp; IsActive =True</errorConditionFormula>
        <errorMessage>Can not activate a user for inactive account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Department_Mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>IsActive  &amp;&amp;  !ISNULL(ContactId) &amp;&amp;   !ISBLANK(ContactId) &amp;&amp; ISNULL(Contact.Department__c) &amp;&amp;  ISPICKVAL(UserType, &apos;PowerCustomerSuccess&apos;)</errorConditionFormula>
        <errorMessage>Department (GFV Access) is mandatory for portal users. Now, click &quot;Cancel&quot;, go back to Contact Page and fill up the Department (GFV Access) attribute.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Email_Need_to_Be_Same_as_Contact_Email</fullName>
        <active>true</active>
        <errorConditionFormula>AND(!ISBLANK(Email),!ISBLANK(ContactId),NOT(CONTAINS(Contact.Account.Valid_Email_Domain__c,RIGHT(Email,LEN(Contact.Email)- FIND(&quot;@&quot;,Contact.Email)))),!ISBLANK( Contact.Account.Valid_Email_Domain__c ),!(Contains(Email,&quot;@globalfoundries.com&quot;)))</errorConditionFormula>
        <errorDisplayField>Email</errorDisplayField>
        <errorMessage>The email domain does not match the valid domain mentioned in the account</errorMessage>
    </validationRules>
</CustomObject>